--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola web..</title>
 </head>
 <body>
-  <p>Hola este es mi sitio web</p>  
+  <p>Hola este es mi sitio web con menos errores</p>  
 </body>
 </html>
